--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
        <button onclick="answerAnalysis()"  id="answerButton" type="button">REPONSE</button>
     </div>
     <div id="answerText"></div>
+    <div id="timer"></div>
    </div>
 </body>
     <script src="script.js"></script>
